@@ -4,6 +4,7 @@ import com.hm.mes_final_260106.constant.MaterialTxType;
 import com.hm.mes_final_260106.dto.InventoryResDto;
 import com.hm.mes_final_260106.dto.MaterialStockReqDto;
 import com.hm.mes_final_260106.dto.MaterialTxResDto;
+import com.hm.mes_final_260106.dto.MaterialTxSimpleResDto;
 import com.hm.mes_final_260106.entity.Material;
 import com.hm.mes_final_260106.entity.MaterialTransaction;
 import com.hm.mes_final_260106.repository.MaterialRepository;
@@ -13,6 +14,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,7 +24,7 @@ public class InventoryService {
     private final MaterialTransactionRepository txRepository;
 
     // =============================
-    // 재고 목록 조회
+    // 재고 목록 조회 (현재 상태)
     // =============================
     @Transactional(readOnly = true)
     public List<InventoryResDto> getInventoryList() {
@@ -30,29 +32,49 @@ public class InventoryService {
 
         return materials.stream().map(m -> {
 
-            MaterialTransaction lastTx = txRepository
-                    .findTop1ByMaterial_CodeOrderByCreatedAtDesc(m.getCode())
-                    .orElse(null);
-
             int qty = safeInt(m.getCurrentStock());
+            int safety = safeInt(m.getSafetyStock());
+            String status;
+            if (qty <= 0 ) {
+                status = "EMPTY";
+            } else if (qty <= safety) {
+                status = "LOW";
+            } else {
+                status = "NORMAL";
+            }
 
-            // 현재 Material 엔티티에 safetyStock이 없으므로 임시값(0)
-            int safety = 0;
-
-            String status = (qty <= safety) ? "LOW" : "NORMAL";
+            // ⭐ 마지막 입고(INBOUND) 기준 Location
+            MaterialTransaction lastInTx = txRepository
+                    .findTop1ByMaterial_CodeAndTypeOrderByCreatedAtDesc(
+                            m.getCode(),
+                            MaterialTxType.INBOUND
+                    )
+                    .orElse(null);
 
             return InventoryResDto.builder()
                     .id(m.getCode())
                     .name(m.getName())
-                    .type((m.getCategory() == null || m.getCategory().isBlank()) ? "RAW" : m.getCategory())
-                    .loc(lastTx != null && lastTx.getTargetLocation() != null ? lastTx.getTargetLocation() : "-")
+                    .type(
+                            (m.getCategory() == null || m.getCategory().isBlank())
+                                    ? "RAW"
+                                    : m.getCategory()
+                    )
+                    .loc(
+                            qty > 0 && lastInTx != null && lastInTx.getTargetLocation() != null
+                                    ? lastInTx.getTargetLocation()
+                                    : "-"
+                    )
                     .qty(qty)
                     .safety(safety)
-                    .unit(lastTx != null && lastTx.getUnit() != null ? lastTx.getUnit() : "ea")
+                    .unit(
+                            lastInTx != null && lastInTx.getUnit() != null
+                                    ? lastInTx.getUnit()
+                                    : "ea"
+                    )
                     .status(status)
-                    .condition("-") // 현재 엔티티에 없음
+                    .condition("-")
                     .build();
-        }).toList();
+        }).collect(Collectors.toList()); // ✅ Java 8/11 호환
     }
 
     // =============================
@@ -62,10 +84,8 @@ public class InventoryService {
     public void stockIn(MaterialStockReqDto req) {
         validateReq(req);
 
-        String materialCode = req.getMaterialCode().trim();
-
-        Material material = materialRepository.findByCode(materialCode)
-                .orElseThrow(() -> new RuntimeException("자재를 찾을 수 없습니다: " + materialCode));
+        Material material = materialRepository.findByCode(req.getMaterialCode().trim())
+                .orElseThrow(() -> new RuntimeException("자재를 찾을 수 없습니다."));
 
         int current = safeInt(material.getCurrentStock());
         material.setCurrentStock(current + req.getQty());
@@ -85,31 +105,44 @@ public class InventoryService {
     }
 
     // =============================
-    // 출고 (Issue)
+    // 출고
     // =============================
     @Transactional
     public void stockOut(MaterialStockReqDto req) {
         validateReq(req);
 
-        String materialCode = req.getMaterialCode().trim();
-
-        Material material = materialRepository.findByCode(materialCode)
-                .orElseThrow(() -> new RuntimeException("자재를 찾을 수 없습니다: " + materialCode));
+        Material material = materialRepository.findByCode(req.getMaterialCode().trim())
+                .orElseThrow(() -> new RuntimeException("자재를 찾을 수 없습니다."));
 
         int current = safeInt(material.getCurrentStock());
-
         if (current < req.getQty()) {
-            throw new RuntimeException("재고 부족: 현재=" + current + ", 요청=" + req.getQty());
+            throw new RuntimeException("재고 부족");
         }
 
         material.setCurrentStock(current - req.getQty());
+
+        // ⭐ 출고 Location 보정
+        String outLocation = nullIfBlank(req.getTargetLocation());
+
+        if (outLocation == null) {
+            // 마지막 입고 Location을 출고 Location으로 사용
+            MaterialTransaction lastInTx =
+                    txRepository.findTop1ByMaterial_CodeAndTypeOrderByCreatedAtDesc(
+                            material.getCode(),
+                            MaterialTxType.INBOUND
+                    ).orElse(null);
+
+            if (lastInTx != null) {
+                outLocation = lastInTx.getTargetLocation();
+            }
+        }
 
         MaterialTransaction tx = MaterialTransaction.builder()
                 .type(MaterialTxType.OUTBOUND)
                 .material(material)
                 .qty(req.getQty())
                 .unit(nullIfBlank(req.getUnit()))
-                .targetLocation(nullIfBlank(req.getTargetLocation()))
+                .targetLocation(outLocation) // ⭐ 항상 값이 들어가도록
                 .targetEquipment(nullIfBlank(req.getTargetEquipment()))
                 .workerName(nullIfBlank(req.getWorkerName()))
                 .build();
@@ -118,11 +151,41 @@ public class InventoryService {
         materialRepository.save(material);
     }
 
+
     // =============================
-    // 트랜잭션 로그 조회
+    // 최근 트랜잭션 로그 (이력 그대로)
     // =============================
     @Transactional(readOnly = true)
+    public List<MaterialTxSimpleResDto> getRecentTxLogs(int limit) {
+
+        List<MaterialTransaction> list =
+                txRepository.findTop5ByOrderByCreatedAtDesc(); // limit 확장 가능
+
+        return list.stream()
+                .map(tx ->
+                        MaterialTxSimpleResDto.builder()
+                                .id(tx.getId())
+                                .createdAt(tx.getCreatedAt().toString())
+                                .type(tx.getType().name().startsWith("IN") ? "IN" : "OUT")
+                                .materialName(tx.getMaterial().getName())
+                                .qty(tx.getQty())
+                                // ⭐ 트랜잭션 당시 Location 그대로
+                                .location(
+                                        tx.getTargetLocation() != null
+                                                ? tx.getTargetLocation()
+                                                : "-"
+                                )
+                                .worker(tx.getWorkerName())
+                                .build()
+                )
+                .collect(Collectors.toList());
+    }
+    // =============================
+// 자재별 트랜잭션 로그 조회 (상세)
+// =============================
+    @Transactional(readOnly = true)
     public List<MaterialTxResDto> getTxLogs(String materialCode) {
+
         if (materialCode == null || materialCode.isBlank()) {
             throw new RuntimeException("materialCode가 비어있습니다.");
         }
@@ -130,28 +193,33 @@ public class InventoryService {
         List<MaterialTransaction> list =
                 txRepository.findByMaterial_CodeOrderByCreatedAtDesc(materialCode.trim());
 
-        return list.stream().map(tx -> MaterialTxResDto.builder()
-                .txId(tx.getId())
-                .time(tx.getCreatedAt())
-                .type(tx.getType())
-                .materialName(tx.getMaterial().getName())
-                .qty(tx.getQty())
-                .unit(tx.getUnit())
-                .targetLocation(tx.getTargetLocation())
-                .targetEquipment(tx.getTargetEquipment())
-                .workerName(tx.getWorkerName())
-                .build()
-        ).toList();
+        return list.stream()
+                .map(tx -> MaterialTxResDto.builder()
+                        .txId(tx.getId())
+                        .time(tx.getCreatedAt())
+                        .type(tx.getType())
+                        .materialName(tx.getMaterial().getName())
+                        .qty(tx.getQty())
+                        .unit(tx.getUnit())
+                        // ⭐ 이력 그대로 (재계산 ❌)
+                        .targetLocation(
+                                tx.getTargetLocation() != null
+                                        ? tx.getTargetLocation()
+                                        : "-"
+                        )
+                        .targetEquipment(tx.getTargetEquipment())
+                        .workerName(tx.getWorkerName())
+                        .build()
+                )
+                .collect(java.util.stream.Collectors.toList());
     }
+
 
     // =============================
     // 공통 유틸
     // =============================
     private void validateReq(MaterialStockReqDto req) {
-        if (req == null) {
-            throw new RuntimeException("요청 바디가 비어있습니다.");
-        }
-        if (req.getMaterialCode() == null || req.getMaterialCode().isBlank()) {
+        if (req == null || req.getMaterialCode() == null || req.getMaterialCode().isBlank()) {
             throw new RuntimeException("materialCode가 비어있습니다.");
         }
         if (req.getQty() == null || req.getQty() <= 0) {
